# OmniScript

./: LICENSE  README.md  pyproject.toml
examples/: api_server.py  background_worker.py  cli_task_runner.py  custom_event_bus.py  discord_heartbeat.py
omniscript/: __init__.py  core.py  decorator.py
